tests/fixtures/positive/naming/ClassNaming.kt
package com.example.naming

class bad_class {
    fun doSomething() {}
}

class another_bad_Class {
    val x = 1
}
