tests/fixtures/negative/naming/VariableMinLength.kt
package naming

fun example() {
    val xy = 1
}
